tests/NormalTests/paczka1/fuzzy1/11264393.err
Error in line 2: Ti2TvzimTT A734 87,6
Error in line 1: A734 S966 73,4
Error in line 13: rYXO7hYK A54 43,2
Error in line 11: Ti2TvzimTT A734 27,4
Error in line 35: eZa A734 253,85
Error in line 27: eZa A734 87,1
